# evkafka

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-to-pypi.yml  test.yml
docs/: consumers.md  endpoint.md  endpoints.md  events.md  handlers.md  index.md  lifespan.md  middleware.md  producers.md  robots.txt  testing.md
docs/overrides/: main.html
evkafka/: __init__.py  app.py  config.py  consumer.py  context.py  dependencies.py  exceptions.py  handle.py  handler.py  lifespan.py  middleware.py  producer.py  sender.py  state.py  testclient.py  types.py  utils.py
evkafka/asyncapi/: models.py  server.py  spec.py
tests/: conftest.py  test_app.py  test_consumer.py  test_context.py  test_dependencies.py  test_handle.py  test_handler.py  test_lifespan.py  test_producer.py  test_sender.py  test_state.py  test_testclient.py  test_utils.py  utils.py
tests/asyncapi/: test_server.py  test_spec.py
